sample/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egov-sample
  namespace: default
spec:
  selector:
    app: egov-sample
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
